--- a/_pages/index.html
+++ b/_pages/index.html
@@ -49,7 +49,7 @@ permalink: /
 <div class="mt-14">
   <h2 class="font-black">Quick Insights</h2>
   <p class="mt-2 text-slate-500 dark:text-slate-300">
-    Bits about my internet presence
+    Bits about my Academic Journey
   </p>
   <div class="mt-6">
     <div class="insight">
@@ -83,8 +83,8 @@ permalink: /
       {% include right_arrow.html %}
       <p>
         <span>Author</span> at famous publications:
-        <a href="https://l.gourav.sh/genicsblog" target="_blank">Genics Blog</a
-        >, <a href="https://l.gourav.sh/dev-to" target="_blank">dev.to</a>,
+        <a href="https://l.gourav.sh/genicsblog" target="_blank">BugBuster</a>,
+        <a href="https://l.gourav.sh/dev-to" target="_blank">dev.to</a>,
         <a href="https://l.gourav.sh/freecodecamp" target="_blank"
           >FreeCodeCamp</a
         >, etc.
