--- a/_pages/index.html
+++ b/_pages/index.html
@@ -55,44 +55,43 @@ permalink: /
     <div class="insight">
       {% include right_arrow.html %}
       <p>
-        Google
-        <a href="/achievement/google-associate-android-developer">certified</a>
-        <span>Associate Android Developer</span>.
+        <span>Arol.dev</span>
+        <a href="/achievement/google-associate-android-developer">graduate</a>
+        <span> in Software Engineering</span>.
       </p>
     </div>
 
-    <div class="insight">
+    <!-- <div class="insight">
       {% include right_arrow.html %}
       <p>
         <span>20+</span>
         <a href="https://l.gourav.sh/youtube" target="_blank">YouTube</a>
         videos. <span>20K+</span> views.
       </p>
-    </div>
+    </div> -->
     <div class="insight">
       {% include right_arrow.html %}
       <p>
-        <span>100+</span>
+        <span>Certified</span>
         <a href="https://l.gourav.sh/stackoverflow" target="_blank"
-          >StackOverflow</a
+          >Quality Assurance Tester</a
         >
-        answers reaching <span>500K+</span> people.
       </p>
     </div>
     <div class="insight">
       {% include right_arrow.html %}
       <p>
-        <span>Author</span> at famous publications:
-        <a href="https://l.gourav.sh/genicsblog" target="_blank">BugBuster</a>,
-        <a href="https://l.gourav.sh/dev-to" target="_blank">dev.to</a>,
-        <a href="https://l.gourav.sh/freecodecamp" target="_blank"
-          >FreeCodeCamp</a
-        >, etc.
+        <span> Holder of a </span>
+        <a href="https://l.gourav.sh/genicsblog" target="_blank">
+          C2 level language proficiency certification in English</a
+        >
+
+        <span> from Cambridge University.</span>
       </p>
     </div>
     <div class="insight">
       {% include right_arrow.html %}
-      <p><span>1 Million+</span> total content views on the internet.</p>
+      <p><span>Over 2 years of experience programming </span></p>
     </div>
   </div>
 </div>
@@ -114,9 +113,9 @@ permalink: /
   <p class="mt-2 text-slate-500 dark:text-slate-300">My Projects:</p>
 
   <div class="mt-6 gap-4 grid grid-flow-row grid-cols-1 sm:grid-cols-3">
-    {% assign projects = 'genics-blog,jekyllex,jekyll-auto-authors' | split: ','
-    %} {% for project in site.data.projects %} {% if projects contains
-    project[0] %} {% include project.html %} {% endif %} {% endfor %}
+    {% assign projects = 'bug-Buster,EnglishQuizz,prismaBank' | split: ',' %} {%
+    for project in site.data.projects %} {% if projects contains project[0] %}
+    {% include project.html %} {% endif %} {% endfor %}
   </div>
 
   <div class="flex justify-center">
