--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -16,7 +16,7 @@ permalink: /projects
 
 <div class="flex justify-center">
   <a
-    href="https://github.com/gouravkhunger"
+    href="https://github.com/Gespuna"
     target="_blank"
     class="mt-10 px-3 py-2 link-button"
   >
